--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Guiado</title>
-  <link rel="stylesheet" href="assets/css/estructura02.css">
+  <link rel="stylesheet" href="assets/css/estructura03.css">
 </head>
 <body>
   <section class="container">
-    <div class="col-1"></div>
-    <div class="col-2"></div>
+    <div class="container01">
+      <div class="col-1"></div>
+    </div>
+    <div class="container02">
+      <div class="col-2"></div>
+      <div class="col-3"></div>
+      <div class="col-4"></div>  
+    </div>
   </section>
 </body>
 </html>
