--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Guiado</title>
-  <link rel="stylesheet" href="assets/css/estructura03.css">
+  <link rel="stylesheet" href="assets/css/estructura01.css">
 </head>
 <body>
+  <section class="container">
+    <div class="col-1"></div>
+    <div class="col-2"></div>
+    <div class="col-3"></div>
+    <div class="col-4"></div>
+    <div class="col-5"></div>
+    <div class="col-6"></div>
+    <div class="col-7"></div>
+    <div class="col-8"></div>
+    <div class="col-9"></div>
+    </div>
+  </section>
+  <!--para esquema 2 y 3
   <section class="container">
     <div class="container01">
       <div class="col-1"></div>
@@ -15,8 +28,8 @@
     <div class="container02">
       <div class="col-2"></div>
       <div class="col-3"></div>
-      <div class="col-4"></div>  
+      <div class="col-4"></div>
     </div>
-  </section>
+  </section> -->
 </body>
 </html>
