--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Guiado</title>
-  <link rel="stylesheet" href="assets/css/estructura01.css">
+  <link rel="stylesheet" href="assets/css/estructura05.css">
 </head>
 <body>
+    <!-- para esquema 1 y 5-->
   <section class="container">
     <div class="col-1"></div>
     <div class="col-2"></div>
@@ -19,7 +20,7 @@
     <div class="col-8"></div>
     <div class="col-9"></div>
     </div>
-  </section>
+  </section>-->
   <!--para esquema 2 y 3
   <section class="container">
     <div class="container01">
@@ -31,5 +32,18 @@
       <div class="col-4"></div>
     </div>
   </section> -->
+  <!--para esquema 4
+    <section class="container">
+      <div class="container01">
+        <div class="col-1"></div>
+      </div>
+      <div class="container02">
+        <div class="col-2"></div>
+      </div>
+      <div class="container03">
+        <div class="col-3"></div>
+      </div>
+    </section>-->
+
 </body>
 </html>
